--- a/index.html
+++ b/index.html
@@ -36,65 +36,31 @@
       </form>
     </div>
 
-    <div class="todo-list">
+    <div class="todo-list" data-list-display-container>
       <div class="todo-header">
-        <h2 class="list-title">YouTube</h2>
-        <p class="task-count">3 tasks remaining</p>
+        <h2 class="list-title" data-list-title>YouTube</h2>
+        <p class="task-count" data-list-count>3 tasks remaining</p>
       </div>
 
       <div class="todo-body">
-        <div class="tasks">
-          <div class="task">
-            <input 
-              type="checkbox"
-              id="task-1"
-            />
-            <label for="task-1">
-              <span class="custom-checkbox"></span>
-              record todo list video
-            </label>
-          </div>
-          <!-- /task-1 -->
-
-          <div class="task">
-              <input 
-                type="checkbox"
-                id="task-2"
-              />
-              <label for="task-2">
-                <span class="custom-checkbox"></span>
-                another task
-              </label>
-            </div>
-            <!-- /task-2 -->
-
-            <div class="task">
-                <input 
-                  type="checkbox"
-                  id="task-3"
-                />
-                <label for="task-3">
-                  <span class="custom-checkbox"></span>
-                  a third task
-                </label>
-              </div>
-              <!-- /task-3 -->
+        <div class="tasks" data-tasks>
         </div>
 
         <div class="new-task-creator">
-            <form action="">
+            <form action="" data-new-task-form>
                 <input 
                   type="text"
                   class="new task"
                   placeholder="new task name"
                   aria-label="new task name"
+                  data-new-task-input
                 />
-                <button class="btn create" aria-label="create new task">+</button>
+                <button class="btn create" aria-label="create new task" data-new-task-create>+</button>
               </form>
         </div>
 
         <div class="delete-stuff">
-          <button class="btn delete">Clear completed tasks</button>
+          <button class="btn delete" data-clear-tasks-button>Clear completed tasks</button>
           <button class="btn delete" data-delete-list-button>Delete list</button>
         </div>
       </div>
